Refactoring to help philipabbyad see what a refactoring using more modern java and spring might look like.
- Making sure we don't pass controller logic around
- We don't always need direct access to repositories I moved the user repo into a user service.
- Leaning into the use of Optional.
- Optional will help you rethink / refactor security and possibly how a RESTFul api would work.
- I may have typoed something, just ask on mastadon if you have questions.